# skoglib

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CRUSH.md  GEMINI.md  README.md  SECURITY.md  codebuff.json  knowledge.md  mypy.ini  pyproject.toml  sgconfig.yml
.claude/: CLAUDE.md  testing-config.md
.claude/agents/: code-analyzer.md  file-analyzer.md  parallel-worker.md  test-runner.md
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/skogai-python-library/: 4-analysis.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/skogai-python-library/tasks/: 003.md  007.md  10.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
.claude/epics/skogai-python-library/updates/3/: stream-1.md  stream-3.md
.claude/epics/skogai-python-library/updates/5/: progress.md  stream-a.md  stream-b.md
.claude/prds/: skogai-python-library.md
.claude/scripts/pm/: epic-show.sh  epic-status.sh  next.sh  standup.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: README.md  ci.yml  claude-code-review.yml  claude.yml  release.yml  security.yml
scripts/: direnv_wrapper.py
src/skoglib/: __init__.py  __main__.py  config.py  exceptions.py  executable.py  logging_config.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_edge_cases.py  test_enhanced_error_handling.py  test_exception_logging.py  test_executable.py  test_import_performance.py  test_integration.py  test_logging_config.py  test_logging_integration.py  test_main.py  test_performance.py  test_timeout_error_contract.py  test_utils.py
tests/fixtures/mock_executables/: env_printer  file_processor  skogai_failure  skogai_success
tests/fixtures/test_data/: config.properties  employees.csv  sample_data.json  sample_input.txt
