[project]
name = "skoglib"
version = "0.1.0"
description = "skoglib"
readme = "README.md"
authors = [{ name = "Emil Skogsund", email = "emil@skogsund.se" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.17.1",
  "pytest>=8.4.2",
  "ruff>=0.12.12",
  "bandit>=1.8.6",
  "coverage[toml]>=7.3.2",
  "pytest-cov>=4.1.0",
]

[project.scripts]
skoglib = "skoglib:main"

[tool.pytest.ini_options]
tdd_guard_project_root = "/home/skogix/dev/skoglib/"
