[project]
name = "skoglib"
version = "0.1.0"
description = "Minimal Python library for SkogAI tool execution and automation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Emil Skogsund", email = "emil@skogsund.se" }]
keywords = ["automation", "executable", "skogai", "subprocess", "cli"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]
dependencies = [
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/SkogAI/skoglib"
Repository = "https://github.com/SkogAI/skoglib.git"
Issues = "https://github.com/SkogAI/skoglib/issues"
Documentation = "https://github.com/SkogAI/skoglib#readme"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "ruff>=0.1.0",
  "bandit>=1.7.0",
  "coverage[toml]>=7.0.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
skoglib = "skoglib:main"

[tool.uv]
# UV-specific optimizations for fast dependency resolution
dev-dependencies = [
    "mypy>=1.0.0",
    "pytest>=7.0.0", 
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "coverage[toml]>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.workspace]
# Optimize for single package
members = ["."]

[tool.pytest.ini_options]
# Remove absolute path to make it more portable
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
